# h-net-dynamic-chunking

./: README.md  justfile  pyproject.toml  train.py  train_metacontroller.py
h_net_dynamic_chunking/: __init__.py  h_net.py  h_net_dynamic_chunking.py  latent_autoregression.py  multi_head_h_net_dynamic_chunking.py  segmented_attention_pool.py
tests/: test_chunker.py
