[project]
name = "h-net-dynamic-chunking"
version = "0.5.5"
description = "H-Net Dynamic Chunking Modules"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT"
keywords = [
    'artificial intelligence',
    'deep learning',
    'learned chunking',
    'learned tokenization'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "assoc-scan>=0.0.2",
    "einx>=0.3.0",
    "einops>=0.8.0",
    "vector-quantize-pytorch>=1.28.2",
    "torch>=2.5",
    "torch-einops-utils>=0.0.32",
    "x-transformers",
    "tqdm>=4.67.3",
    "fire>=0.7.1",
    "wandb>=0.26.1",
    "accelerate>=1.10.1",
    "gymnasium>=1.1.1",
    "tensorboard>=2.20.0",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "x-evolution>=0.1.31",
    "x-mlps-pytorch>=0.3.4",
    "hl-gauss-pytorch>=0.2.3",
    "discrete-continuous-embed-readout>=0.2.7",
    "memmap-replay-buffer>=0.0.29",
]

[project.urls]
Homepage = "https://pypi.org/project/h-net-dynamic-chunking/"
Repository = "https://github.com/lucidrains/h-net-dynamic-chunking"

[project.optional-dependencies]
examples = [
    "tqdm"
]
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools.packages.find]
include = ["h_net_dynamic_chunking*"]


[tool.hatch.build.targets.sdist]
include = [
    "h_net_dynamic_chunking",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
