[project]
name = "h-net-dynamic-chunking"
version = "0.5.10"
description = "H-Net Dynamic Chunking Modules"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT"
keywords = [
    'artificial intelligence',
    'deep learning',
    'learned chunking',
    'learned tokenization'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "assoc-scan>=0.0.2",
    "einx>=0.3.0",
    "einops>=0.8.0",
    "vector-quantize-pytorch>=1.29.0",
    "torch>=2.5",
    "torch-einops-utils>=0.0.32",
    "x-mlps-pytorch",
    "x-transformers",
]

[project.urls]
Homepage = "https://pypi.org/project/h-net-dynamic-chunking/"
Repository = "https://codeberg.org/lucidrains/h-net-dynamic-chunking"

[project.optional-dependencies]
examples = [
    "tqdm"
]
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools.packages.find]
include = ["h_net_dynamic_chunking*"]


[tool.hatch.build.targets.sdist]
include = [
    "h_net_dynamic_chunking",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
